infrastructure/grubfleet-network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: GrubFleet ERP shared VPC (Lambda, RDS, ElastiCache)

Parameters:
  VpcCidr:
    Type: String
    Default: 10.42.0.0/16

Resources:
  GrubFleetVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: grubfleet-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: grubfleet-igw

  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref GrubFleetVpc
      InternetGatewayId: !Ref InternetGateway

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref GrubFleetVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: 10.42.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: grubfleet-public-a

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref GrubFleetVpc
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: 10.42.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: grubfleet-public-b

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref GrubFleetVpc
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: 10.42.10.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: grubfleet-private-a

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref GrubFleetVpc
      AvailabilityZone: !Select [1, !GetAZs '']
      CidrBlock: 10.42.11.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: grubfleet-private-b

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GrubFleetVpc
      Tags:
        - Key: Name
          Value: grubfleet-public-rt

  PublicDefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: VpcGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetARouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetBRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GrubFleetVpc
      Tags:
        - Key: Name
          Value: grubfleet-private-rt

  PrivateSubnetARouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnetBRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTable

  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: GrubFleet Lambda egress
      VpcId: !Ref GrubFleetVpc
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: grubfleet-lambda-sg

  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: GrubFleet RDS PostgreSQL
      VpcId: !Ref GrubFleetVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref LambdaSecurityGroup
      Tags:
        - Key: Name
          Value: grubfleet-rds-sg

  RedisSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: GrubFleet ElastiCache Redis
      VpcId: !Ref GrubFleetVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6379
          ToPort: 6379
          SourceSecurityGroupId: !Ref LambdaSecurityGroup
      Tags:
        - Key: Name
          Value: grubfleet-redis-sg

Outputs:
  VpcId:
    Value: !Ref GrubFleetVpc
    Export:
      Name: !Sub '${AWS::StackName}-VpcId'
  PublicSubnetAId:
    Value: !Ref PublicSubnetA
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnetAId'
  PublicSubnetBId:
    Value: !Ref PublicSubnetB
    Export:
      Name: !Sub '${AWS::StackName}-PublicSubnetBId'
  PrivateSubnetAId:
    Value: !Ref PrivateSubnetA
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnetAId'
  PrivateSubnetBId:
    Value: !Ref PrivateSubnetB
    Export:
      Name: !Sub '${AWS::StackName}-PrivateSubnetBId'
  LambdaSecurityGroupId:
    Value: !Ref LambdaSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-LambdaSecurityGroupId'
  RdsSecurityGroupId:
    Value: !Ref RdsSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-RdsSecurityGroupId'
  RedisSecurityGroupId:
    Value: !Ref RedisSecurityGroup
    Export:
      Name: !Sub '${AWS::StackName}-RedisSecurityGroupId'
